# SDR

./: CMakeLists.txt  README.md  demo.bat  demo.sh  demo_KITTI.bat  demo_KITTI.sh
GCoptimization/: CMakeLists.txt  GCoptimization.cpp  GCoptimization.h  LinkedBlockList.cpp  LinkedBlockList.h  block.h  energy.h  graph.cpp  graph.h  maxflow.cpp
Superpixel/: CMakeLists.txt  convolve.h  disjoint-set.h  filter.h  image.h  imconv.h  imutil.h  misc.h  pnmfile.h  segment-graph.h
data/: README.md  README.txt
data/MiddV3/trainingH/Adirondack/: calib.txt
fdr/: ArgsParser.h  CMakeLists.txt  Evaluator.h  FastDR.cpp  FastDR.h  Parameters.h  SurfaceFitting.cpp  SurfaceFitting.h  TimeStamper.h  Utilities.hpp  main.cpp
